--- a/page-don.css
+++ b/page-don.css
@@ -1,10 +1,10 @@
 *{
   box-sizing: border-box;
   max-width: 100%;
+  font-family: Times New Roman, serif;
 }
 body{
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
 }
 .logo{
     width: 150px;
@@ -20,6 +20,7 @@ body{
 .menu{
     text-decoration: none;
     font-weight: bold;
+    font-family: Times New Roman, serif;
     font-size: 20px;
     color:#00561b;
 }
