--- a/demande-aide.css
+++ b/demande-aide.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box;
     max-width: 100%;
+    font-family: 'Times New Roman', Times, serif;
   }
   body{
     margin: 0;
@@ -47,6 +48,7 @@ H4{
 }
 .p-footer{
     color: white;
+    margin-left: -2px;
 }
 .footer-menu{
     color: white;
@@ -169,7 +171,7 @@ textarea{
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(255, 165, 0, 0.5); /* Orange avec opacité */
+      background-color: rgba(255, 165, 0, 0.5); 
       color: white;
       display: flex;
       justify-content: center;
