Création de la page d'accueil

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
     .hero-section {
-      background: url('banner.jpg.jpeg') center/cover no-repeat;
+      background: url('banner.jpg.') center/cover no-repeat;
       color: #ff7f00;
       text-align: center;
       padding: 100px 20px;
