Création de la page d'accueil

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-    .hero-section {
+    .banniére {
       background: url('banner.jpg.') center/cover no-repeat;
       color: #ff7f00;
       text-align: center;
