--- a/demande-aide.css
+++ b/demande-aide.css
@@ -191,3 +191,16 @@ label{
   color: white;
   padding-left: 80px;
 }
+#merciMessage{
+  display: none;
+   color: white; 
+   background-color: green;
+    padding: 10px; 
+    
+     border-radius: 5px;
+      text-align: center; 
+    
+}
+form label{
+  padding-top: 15px;
+}
