--- a/style.css
+++ b/style.css
@@ -1,31 +1,4 @@
 
-    .banniére {
-      background: url('banner.jpg.') center/cover no-repeat;
-      color: #ff7f00;
-      text-align: center;
-      padding: 100px 30px;
-      height: 90vh;
-      filter: brightness(0.6);
-    }
-    .carousel-caption{
-      bottom: 30%;
-    }
-    .carousel-caption p {
-      color: white;
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8);
-    }
-    .btn-orange {
-      background-color: orange;
-      color: white;
-    }
-    .icon-box {
-      padding: 20px;
-      background: #f8f9fa;
-      text-align: center;
-      border-radius: 10px;
-    }
- 
-
 *{
   box-sizing: border-box;
   max-width: 100%;
@@ -43,9 +16,7 @@ body{
     display: flex;
     align-items: center;
     list-style: none;
-    gap: 20px;
-    padding: 0;
-    flex-wrap: wrap;
+    gap: 90px;
 
 }
 .menu{
@@ -57,6 +28,30 @@ body{
 .menu:hover{
     color:#ff7f00;
 }
+ .banner {
+     position: relative;
+     height: 90vh;
+     background: url('images/banner.jpg')center/cover no-repeat;
+     color: white;
+    }
+
+    .banner::after {
+    content: "";
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    }
+    .banner-content {
+      position: relative;
+      z-index: 2;
+      text-align: center;
+      top: 50%;
+      transform: translateY(-50%);
+     
+    }
+ 
+
 .logo-footer{
     width: 100px;
     height: 100px;
