--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@ body{
      height: 90vh;
      background: url('images/banner.jpg')center/cover no-repeat;
      color: white;
+     text-align: center;
+     justify-content: center;
+     align-items: center;
     }
 
     .banner::after {
@@ -40,7 +43,8 @@ body{
     position: absolute;
     top: 0; left: 0;
     width: 100%; height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 100, 0, 0.5);
+    z-index: 1;
     }
     .banner-content {
       position: relative;
@@ -48,7 +52,9 @@ body{
       text-align: center;
       top: 50%;
       transform: translateY(-50%);
-     
+    }
+    .banner-content h1{
+      color: #ff7f00;
     }
  
 
