--- a/style.css
+++ b/style.css
@@ -61,9 +61,26 @@ body{
       color: #00561b;
       border: 2px solid #00561b;
       border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      padding: 30px  10px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      margin-right: 0;
+      transition: all 0.3s ease-in-out;
+    
     }
+    .stat-box:hover{
+      transform: translateY(-5px);
+      box-shadow: 0 4px 12 px rgba(0, 0, 0, 0.2);
+    }
+    .step-1{
+      margin-top: 350px;
+    }
+    .step-2{
+      margin-top: 350px;
+    }
+    .step-3{
+      margin-top: 350px;
+    }
+
     section{
       scroll-margin-top: 80px;
     }
