--- a/style.css
+++ b/style.css
@@ -252,11 +252,94 @@ body{
         font-size: 0.95rem;
         color: #e6e6e6;
        }
+        <!-- DEMANDE DE DON -- >
+        .don-section{
+          position: relative;
+          background-image: url(images/aide.jpg);
+          background-size: cover;
+          background-position: center;
+          padding: 100px 20px;
+          display: flex;
+          justify-content: center;
+          text-align: center;
+        }
+       <!-- REMERCIEMENT -- >
+       .merci-section{
+        padding: 60px 20px;
+        background-color: #ffffd7;
+        text-align: center;
+       }
+       .merci-title{
+        color: #ff7700;
+        font-size: 2rem;
+        font-weight: bold;
+        margin-bottom: 20px;
+       }
+       .merci-text{
+        font-size: 1.1rem;
+        color: #333;
+        max-width: 800px;
+        margin: 0 auto 40px auto;
+       }
+       .merci-images{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 15px;
+       }
+       .merci-images img{
+        width: 200px;
+        height: 150px;
+        object-fit: cover;
+        border-radius: 10px;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+       }
 
 
- 
-    
- 
+  <!-- PARTENAIRE -- >
+ .collab-title{
+  color: #00561b;
+  font-weight: bold;
+  font-size: 2rem;
+  text-align: center;
+  text-decoration: underline;
+  text-decoration-color: #00561b;
+  text-underline-offset: 6px;
+  margin-bottom: 40px;
+ }
+ .collab-logo{
+  width: 130%;
+  height: 80px;
+  object-fit: contain;
+  background-color: white;
+  border-radius: 12px;
+  padding: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  flex-shrink: 0;
+  transition: transform 0.3s;
+ }
+.collab-logo:hover{
+  transform: scale(1.05);
+}
+.collab-box{
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  height: 100%;
+}
+.collab-section{
+  background-color: #f9f9f9;
+  padding: 60px 0;
+}
+.logo-bar{
+ display: flex;
+ flex-wrap: nowrap;
+ justify-content: center;
+ gap: 20px;
+ overflow-x: auto;
+ padding: 10px 20px;
+}
+  <!-- FOOTER -- >  
 .logo-footer{
     width: 100px;
     height: 100px;
