--- a/style.css
+++ b/style.css
@@ -263,6 +263,9 @@ body{
           justify-content: center;
           text-align: center;
         }
+        .don-box{
+
+        }
        <!-- REMERCIEMENT -- >
        .merci-section{
         padding: 60px 20px;
@@ -308,15 +311,15 @@ body{
   margin-bottom: 40px;
  }
  .collab-logo{
-  width: 130%;
-  height: 80px;
+  width: 100px;
+  height: 70px;
   object-fit: contain;
-  background-color: white;
-  border-radius: 12px;
-  padding: 10px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  background: white;
+  border-radius: 10px;
+  padding: 6px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   flex-shrink: 0;
-  transition: transform 0.3s;
+  transition: transform 0.3s ease;
  }
 .collab-logo:hover{
   transform: scale(1.05);
@@ -338,6 +341,12 @@ body{
  gap: 20px;
  overflow-x: auto;
  padding: 10px 20px;
+}
+@media (max-width: 768px) {
+  .collab-logo{
+    width: 80px;
+    height: 60px;
+  }
 }
   <!-- FOOTER -- >  
 .logo-footer{
