--- a/demande-aide.css
+++ b/demande-aide.css
@@ -8,7 +8,8 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.logo{
+
+ .logo{
     width: 150px;
     height: 150px;
 }
@@ -22,8 +23,10 @@
 .menu{
     text-decoration: none;
     font-weight: bold;
-    font-size: 20px;
+    font-family: Times New Roman, serif;
+    font-size: 22px;
     color:#00561b;
+    margin-left:40px;
 }
 .menu:hover{
     color:#ff7f00;
@@ -32,11 +35,17 @@
     width: 100px;
     height: 100px;
     border-radius: 100px;
+    margin-left: 150px;
 }
 .col{
-    margin-left: 5px;
+    margin-left: 40px;
     margin-top: 5px;
 }
+
+.col,ul{
+  padding-left: 60px;
+}
+
 .texte-footer{
     font-size: 14px;
     color: white;
@@ -48,12 +57,13 @@ H4{
 }
 .p-footer{
     color: white;
-    margin-left: -2px;
+    margin-left: -10px;
 }
 .footer-menu{
     color: white;
-    text-decoration: none;
-}
+    text-decoration: none;    
+} 
+
 body {
   margin: 0;
   font-family: Arial, sans-serif;
@@ -80,7 +90,9 @@ footer {
   width: 80px;
   height: auto;
   margin-bottom: 15px;
+ 
 }
+
 
 .texte-footer {
   font-size: 14px;
@@ -206,14 +218,13 @@ label{
   padding-left: 80px;
 }
 #merciMessage{
-  display: none;
-   color: white; 
-   background-color: green;
-    padding: 10px; 
-    
-     border-radius: 5px;
+   display: none; 
+    color: black;
+   background-color:#c7e8f4;
+    /* padding: 10px;  */
+    /* border-radius: 5px; */
       text-align: center; 
-    
+      
 }
 form label{
   padding-top: 15px;
